--- a/README
+++ b/README
@@ -1,4 +1,68 @@
-RECIPES
-["controllers", "core", "deployment", "email", "extras", "frontend", "gems", "git", "init", "learn_rails", "models", "prelaunch", "rails_bootstrap", "rails_devise", "rails_devise_pundit", "rails_foundation", "rails_omniauth", "rails_signup_download", "railsapps", "readme", "routes", "saas", "setup", "testing", "tests4", "views"]
-PREFERENCES
-{:git=>true, :apps4=>"none", :dev_webserver=>"webrick", :prod_webserver=>"same", :database=>"sqlite", :templates=>"erb", :tests=>"rspec", :continuous_testing=>"guard", :frontend=>"bootstrap3", :email=>"smtp", :authentication=>"devise", :devise_modules=>"default", :authorization=>"pundit", :form_builder=>"simple_form", :starter_app=>"admin_app"}
+Thoughtcrime
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
+
+* controllers
+* core
+* deployment
+* email
+* extras
+* frontend
+* gems
+* git
+* init
+* learn_rails
+* models
+* prelaunch
+* rails_bootstrap
+* rails_devise
+* rails_devise_pundit
+* rails_foundation
+* rails_omniauth
+* rails_signup_download
+* railsapps
+* readme
+* routes
+* saas
+* setup
+* testing
+* tests4
+* views
+
+Preferences:
+
+* git: true
+* apps4: none
+* dev_webserver: webrick
+* prod_webserver: same
+* database: sqlite
+* templates: erb
+* tests: rspec
+* continuous_testing: guard
+* frontend: bootstrap3
+* email: smtp
+* authentication: devise
+* devise_modules: default
+* authorization: pundit
+* form_builder: simple_form
+* starter_app: admin_app
+* rvmrc: false
+* quiet_assets: true
+* local_env_file: foreman
+* better_errors: true
+* pry: true
+* ban_spiders: true
+* jsruntime: true
+* github: true
+
+________________________
+
+License
